--- a/vvsc_web/package.json
+++ b/vvsc_web/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
@@ -12,6 +16,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "react-scroll": "^1.8.1",
+    "react-social-icons": "^4.1.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
